added adaptive product page

--- a/app/html/parts/cards/_product-card.html
+++ b/app/html/parts/cards/_product-card.html
@@ -5,6 +5,7 @@
             <ul class="product-card__list">
                 <li class="product-card__item">
                     <a class="circle-btn circle-btn--icon" href="#">
+                        <span class="sr-only">Search</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#search"></use>
                         </svg>
@@ -12,13 +13,15 @@
                 </li>
                 <li class="product-card__item">
                     <button class="circle-btn circle-btn--icon" href="#">
+                        <span class="sr-only">Add to basket</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#basket"></use>
                         </svg>
                     </button>
                 </li>
-                <li class="product-card__itam">
+                <li class="product-card__item">
                     <button class="circle-btn circle-btn--icon" href="#">
+                        <span class="sr-only">Like</span>
                         <svg>
                             <use xlink:href="images/sprite.svg#like"></use>
                         </svg>
@@ -42,11 +45,13 @@
         </div>
         <div class="product-card__icons list-disable">
             <button class="product-card__icon circle-btn">
+                <span class="sr-only">Add to basket</span>
                 <svg class="">
                     <use xlink:href="images/sprite.svg#basket"></use>
                 </svg>
             </button>
             <button class="product-card__icon circle-btn">
+                <span class="sr-only">Like</span>
                 <svg class="">
                     <use xlink:href="images/sprite.svg#like"></use>
                 </svg>
