--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('./parts/_head.html')
+@@include('./parts/_head.html',{
+    "title": "Main"
+})
 
 <body>
+
+    <!-- Пометки для ментора
+        1.Иконки корзина и лайк в хэдере не стал опускать вниз, что бы по пикселю сходилось, так как иконки из-за этого смотрятся не ровно, не в одну линию
+
+        2.По пикселю не сходятся страницы product-list 1 и product-list 2, так как там разные горизонтальные отступы между крточками (на 5px отличаются), я оставил, как в product-list 1
+
+        3. Не могу понять как сделать плавный transition при клике на кнопку фильтров на моб разрешениее, не только при вызове модалки, но и при закрытии
+
+        4. Не знаю, что делать при адаптиве с блоком recent-product который под фильтром в сайд-баре, ничего лучше не придумал, чем сделать его дубликат и при адаптиве показивать дубликат под контентом на мобильных разрешениях (блок - recent-product--dublicate)
+    -->
+
     @@include('./parts/components/_header.html')
     
     <main class="main">
