--- a/app/html/parts/_head.html
+++ b/app/html/parts/_head.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glee | Главная</title>
+    <title>Glee | @@title</title>
     <link rel="icon" href="images/icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
