--- a/app/html/products.html
+++ b/app/html/products.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('./parts/_head.html')
+@@include('./parts/_head.html',{
+"title": "Products"
+})
 
 <body>
     @@include('./parts/components/_header.html')
@@ -12,9 +14,16 @@
         })
         <section class="shop">
             <div class="container">
+                <button class="filter-button">
+                    <svg class="">
+                        <use xlink:href="images/sprite.svg#filter"></use>
+                    </svg>
+                </button>
                 <div class="shop__inner">
-                    <div class="shop__filter">
-                        @@include('./parts/filters/_filter-shop.html')
+                    <div class="shop__sidebar">
+                        <div class="shop__filter shop-filter">
+                            @@include('./parts/filters/_filter-shop.html')
+                        </div>
                         <div class="recent-products">
                             <span class="recent-products__title title-filters">
                                 recent products
@@ -43,7 +52,6 @@
                                 </li>
                             </ul>
                         </div>
-
                     </div>
                     <div class="shop__content products-shop">
                         <div class="shop__view">
@@ -160,6 +168,34 @@
                                 <a class="pagination__link" href="#">Next</a>
                             </li>
                         </ul>
+                        <div class="recent-products recent-products--dublicate">
+                            <span class="recent-products__title title-filters">
+                                recent products
+                            </span>
+                            <ul class="recent-products__list">
+                                <li class="recent-products__item">
+                                    @@include('./parts/cards/_recent-product.html', {
+                                    "image": "lamp3",
+                                    "subtitle": "Pendant lamp",
+                                    "cost": "23"
+                                    })
+                                </li>
+                                <li class="recent-products__item">
+                                    @@include('./parts/cards/_recent-product.html', {
+                                    "image": "lamp1",
+                                    "subtitle": "Pendant lamp",
+                                    "cost": "23"
+                                    })
+                                </li>
+                                <li class="recent-products__item">
+                                    @@include('./parts/cards/_recent-product.html', {
+                                    "image": "lamp2",
+                                    "subtitle": "Pendant lamp",
+                                    "cost": "23"
+                                    })
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
