added blog-list page

--- a/app/html/parts/buttons/_buttons.html
+++ b/app/html/parts/buttons/_buttons.html
@@ -1,4 +1,4 @@
-<a class="slider-top__link button @@type" href="#">
+<a class="@@mod button @@type" href="#">
     @@text
     <svg>
         <use xlink:href="images/sprite.svg#@@svg"></use>
