--- a/app/html/parts/index/_top-slider.html
+++ b/app/html/parts/index/_top-slider.html
@@ -20,6 +20,7 @@
                                     </div>
                                     @@include('../buttons/_buttons.html', {
                                         "text": "Shop Now",
+                                        "mod": "slider-top__button",
                                         "svg": "arrow",
                                         "type": ""
                                     })
@@ -47,6 +48,7 @@
                                     </div>
                                     @@include('../buttons/_buttons.html', {
                                         "text": "Shop Now",
+                                        "mod": "slider-top__button",
                                         "svg": "arrow",
                                         "type": ""
                                     })
@@ -74,6 +76,7 @@
                                     </div>
                                     @@include('../buttons/_buttons.html', {
                                         "text": "Shop Now",
+                                        "mod": "slider-top__button",
                                         "svg": "arrow",
                                         "type": ""
                                     })
