--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
                                             incididunt
                                         </p>
                                     </div>
-                                    <a class="slider-top__link button " href="#">
+                                    <a class="slider-top__button button " href="#">
     Shop Now
     <svg>
         <use xlink:href="images/sprite.svg#arrow"></use>
@@ -146,7 +146,7 @@
                                             incididunt
                                         </p>
                                     </div>
-                                    <a class="slider-top__link button " href="#">
+                                    <a class="slider-top__button button " href="#">
     Shop Now
     <svg>
         <use xlink:href="images/sprite.svg#arrow"></use>
@@ -174,7 +174,7 @@
                                             incididunt
                                         </p>
                                     </div>
-                                    <a class="slider-top__link button " href="#">
+                                    <a class="slider-top__button button " href="#">
     Shop Now
     <svg>
         <use xlink:href="images/sprite.svg#arrow"></use>
@@ -805,7 +805,7 @@
                 LEDCornBulb Lamp 5W 7W 10W 12W 15W E26 E27LEDCornLight
             </p>
         </div>
-        <a class="slider-top__link button button--transparent" href="#">
+        <a class="@@mod button button--transparent" href="#">
     View more
     <svg>
         <use xlink:href="images/sprite.svg#arrow"></use>
@@ -829,7 +829,7 @@
                 50W 8000lm Compact Size for HID StreetLightReplacementLEDCornLight
             </p>
         </div>
-        <a class="slider-top__link button button--transparent" href="#">
+        <a class="@@mod button button--transparent" href="#">
     View more
     <svg>
         <use xlink:href="images/sprite.svg#arrow"></use>
