--- a/app/html/product.html
+++ b/app/html/product.html
@@ -32,16 +32,16 @@
                             </li>
                         </ul>
                         <ul class="product-self__slider-right slider-big">
-                            <li class="slider-big__item">
+                            <li class="slider-big__item" data-fancybox="gallery" data-src="images/products/slide-1.png" data-sizes="(max-width: 600px) 480px, 800px">
                                 <img class="slider-big__image" src="images/products/slide-1.png" alt="product image">
                             </li>
-                            <li class="slider-big__item">
+                            <li class="slider-big__item" data-fancybox="gallery" data-src="images/products/slide-2.png">
                                 <img class="slider-big__image" src="images/products/slide-2.png" alt="product image">
                             </li>
-                            <li class="slider-big__item">
+                            <li class="slider-big__item" data-fancybox="gallery" data-src="images/products/slide-3.png">
                                 <img class="slider-big__image" src="images/products/slide-3.png" alt="product image">
                             </li>
-                            <li class="slider-big__item">
+                            <li class="slider-big__item" data-fancybox="gallery" data-src="images/products/slide-4.jpeg">
                                 <img class="slider-big__image" src="images/products/slide-4.jpeg" alt="product image">
                             </li>
                         </ul>
