added adaptive blog-one and fix some problem

--- a/app/html/blog-one.html
+++ b/app/html/blog-one.html
@@ -230,7 +230,7 @@
                             </form>
                         </div>
                         <div class="filter-shop__item category">
-                            <span class="category__title title-filters">category</span>
+                            <button class="category__title title-filters slide" type="button">category</button>
                             <form class="category__form" action="#">
                                 <label class="category__label">
                                     <input class="category__input sr-only" type="checkbox" name="chair">
@@ -255,9 +255,9 @@
                             </form>
                         </div>
                         <div class="recent-posts">
-                            <h2 class="recent-posts__title title-filters">
+                            <button class="recent-posts__title title-filters slide" type="button">
                                 Recent Posts
-                            </h2>
+                            </button>
                             <ul class="recent-posts__list">
                                 <li class="recent-posts__item">
                                     <article class="recent-post link">
